[gd_scene load_steps=18 format=3 uid="uid://b0frq720usft"]

[ext_resource type="Texture2D" uid="uid://bnkyelr3wuy4b" path="res://Resources/Sprites/Tiles/Teleporter.png" id="1_tlrv1"]
[ext_resource type="Script" path="res://Scripts/Teleporter.gd" id="1_u6owy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbkja"]
atlas = ExtResource("1_tlrv1")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3aom"]
atlas = ExtResource("1_tlrv1")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwwu7"]
atlas = ExtResource("1_tlrv1")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_myiui"]
atlas = ExtResource("1_tlrv1")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u8oj"]
atlas = ExtResource("1_tlrv1")
region = Rect2(0, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0441v"]
atlas = ExtResource("1_tlrv1")
region = Rect2(64, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s2oa"]
atlas = ExtResource("1_tlrv1")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks4sc"]
atlas = ExtResource("1_tlrv1")
region = Rect2(128, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_en5ec"]
atlas = ExtResource("1_tlrv1")
region = Rect2(192, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6jgj"]
atlas = ExtResource("1_tlrv1")
region = Rect2(256, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn3hp"]
atlas = ExtResource("1_tlrv1")
region = Rect2(320, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hkie"]
atlas = ExtResource("1_tlrv1")
region = Rect2(384, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55u4m"]
atlas = ExtResource("1_tlrv1")
region = Rect2(448, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6gyf2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbkja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3aom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwwu7")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_myiui")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_8u8oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0441v")
}],
"loop": false,
"name": &"Unlock",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s2oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks4sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en5ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6jgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn3hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hkie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55u4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55u4m")
}],
"loop": false,
"name": &"Use",
"speed": 2.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ar4e2"]
size = Vector2(48, 32)

[node name="Teleporter" type="AnimatedSprite2D"]
z_index = -1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_6gyf2")
animation = &"Use"
script = ExtResource("1_u6owy")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 30)
shape = SubResource("RectangleShape2D_ar4e2")

[node name="Timer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 10)

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
